// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clock animates second hand 1`] = `
<svg
  class="StyledClock-bEPleQ humySj"
  version="1.1"
  width="96"
  height="96"
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 96 96"
>
  <circle
    class="StyledClock__StyledCircle-diJlsZ fptDiF"
    fill="none"
    stroke="#000000"
    cx="48"
    cy="48"
    r="46"
  />
  <line
    class="StyledClock__StyledSecond-oRaEs bSNOuM"
    x1="48"
    y1="48"
    x2="48"
    y2="9"
    stroke="#000000"
    stroke-linecap="round"
  />
  <line
    class="StyledClock__StyledMinute-bDjMrZ hfaspW"
    x1="48"
    y1="48"
    x2="48"
    y2="12"
    stroke="#000000"
    stroke-linecap="round"
  />
  <line
    class="StyledClock__StyledHour-fpyVuK zXhiY"
    x1="48"
    y1="48"
    x2="48"
    y2="24"
    stroke="#000000"
    stroke-linecap="round"
  />
</svg>
`;

exports[`Clock animates second hand 2`] = `
<svg
  class="StyledClock-bEPleQ humySj"
  version="1.1"
  width="96"
  height="96"
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 96 96"
>
  <circle
    class="StyledClock__StyledCircle-diJlsZ fptDiF"
    fill="none"
    stroke="#000000"
    cx="48"
    cy="48"
    r="46"
  />
  <line
    class="StyledClock__StyledSecond-oRaEs bSNOuM"
    x1="48"
    y1="48"
    x2="48"
    y2="9"
    stroke="#000000"
    stroke-linecap="round"
  />
  <line
    class="StyledClock__StyledMinute-bDjMrZ hfaspW"
    x1="48"
    y1="48"
    x2="48"
    y2="12"
    stroke="#000000"
    stroke-linecap="round"
  />
  <line
    class="StyledClock__StyledHour-fpyVuK zXhiY"
    x1="48"
    y1="48"
    x2="48"
    y2="24"
    stroke="#000000"
    stroke-linecap="round"
  />
</svg>
`;

exports[`Clock night renders 1`] = `
<svg
  class="StyledClock-bEPleQ humySj"
  version="1.1"
  width="96"
  height="96"
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 96 96"
>
  <circle
    class="StyledClock__StyledCircle-diJlsZ ftTiLk"
    fill="none"
    stroke="#000000"
    cx="48"
    cy="48"
    r="46"
  />
  <line
    class="StyledClock__StyledMinute-bDjMrZ bbiIfv"
    x1="48"
    y1="48"
    x2="48"
    y2="12"
    stroke="#000000"
    stroke-linecap="round"
  />
  <line
    class="StyledClock__StyledHour-fpyVuK doQwzc"
    x1="48"
    y1="48"
    x2="48"
    y2="24"
    stroke="#000000"
    stroke-linecap="round"
  />
</svg>
`;

exports[`Clock night renders 2`] = `
<svg
  class="StyledClock-bEPleQ humySj"
  version="1.1"
  width="96"
  height="96"
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 96 96"
>
  <circle
    class="StyledClock__StyledCircle-diJlsZ ftTiLk"
    fill="none"
    stroke="#000000"
    cx="48"
    cy="48"
    r="46"
  />
  <line
    class="StyledClock__StyledMinute-bDjMrZ bbiIfv"
    x1="48"
    y1="48"
    x2="48"
    y2="12"
    stroke="#000000"
    stroke-linecap="round"
  />
  <line
    class="StyledClock__StyledHour-fpyVuK doQwzc"
    x1="48"
    y1="48"
    x2="48"
    y2="24"
    stroke="#000000"
    stroke-linecap="round"
  />
</svg>
`;

exports[`Clock renders 1`] = `
<div
  class="StyledGrommet-gGRXwz fbqGIt"
>
  <svg
    class="StyledClock-bEPleQ humySj"
    version="1.1"
    width="96"
    height="96"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 96 96"
  >
    <circle
      class="StyledClock__StyledCircle-diJlsZ ftTiLk"
      fill="none"
      stroke="#000000"
      cx="48"
      cy="48"
      r="46"
    />
    <line
      class="StyledClock__StyledSecond-oRaEs bSNOuM"
      x1="48"
      y1="48"
      x2="48"
      y2="9"
      stroke="#000000"
      stroke-linecap="round"
    />
    <line
      class="StyledClock__StyledMinute-bDjMrZ bbiIfv"
      x1="48"
      y1="48"
      x2="48"
      y2="12"
      stroke="#000000"
      stroke-linecap="round"
    />
    <line
      class="StyledClock__StyledHour-fpyVuK doQwzc"
      x1="48"
      y1="48"
      x2="48"
      y2="24"
      stroke="#000000"
      stroke-linecap="round"
    />
  </svg>
</div>
`;

exports[`Clock renders 2`] = `
<div
  class="StyledGrommet-gGRXwz fbqGIt"
>
  <svg
    class="StyledClock-bEPleQ humySj"
    version="1.1"
    width="96"
    height="96"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 96 96"
  >
    <circle
      class="StyledClock__StyledCircle-diJlsZ ftTiLk"
      fill="none"
      stroke="#000000"
      cx="48"
      cy="48"
      r="46"
    />
    <line
      class="StyledClock__StyledSecond-oRaEs kgjbvG"
      x1="48"
      y1="48"
      x2="48"
      y2="9"
      stroke="#000000"
      stroke-linecap="round"
    />
    <line
      class="StyledClock__StyledMinute-bDjMrZ iPvwyA"
      x1="48"
      y1="48"
      x2="48"
      y2="12"
      stroke="#000000"
      stroke-linecap="round"
    />
    <line
      class="StyledClock__StyledHour-fpyVuK eQMuaB"
      x1="48"
      y1="48"
      x2="48"
      y2="24"
      stroke="#000000"
      stroke-linecap="round"
    />
  </svg>
</div>
`;
